compiler/testData/asJava/lightClasses/compilationErrors/SameName.kt
// A
class A {
    fun f(i: Int, s: Double) {}
    fun f(i: Int, s: Double) {}


    fun g(i: Int, s: Double): Int {}
    fun g(s: Int, i: Double): String {}

    private val i: Int = 0
    private val i: String = ""

    private val j: String = "a"
    private val j: String = "b"
}
